<resources>
    <string name="app_name">TRAVELMATICS</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Register</string>
    <string name="action_sign_in_short">Sign up</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="full_name">Full Name</string>
    <string name="save">Save</string>
    <string name="Title">Title</string>
    <string name="prices">Price</string>
    <string name="describe">Description</string>
    <string name="todo">mydealimages</string>
    <string name="new_travel_deals">New Travel Deals</string>
    <string name="delete">Delete</string>
    <string name="price">Price</string>
    <string name="description">description</string>
    <string name="title">Title</string>
    <string name="logout">Logout</string>
    <string name="button">Select Image</string>
    <string name="find_the_best_travel_deals_here">FIND THE BEST TRAVEL DEALS HERE</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="travelmatics">TRAVELMATICS</string>
</resources>
